--- a/HTML/I.html
+++ b/HTML/I.html
@@ -10,7 +10,7 @@
 <h1>Problem I: Cluster Network</h1>
 
 <h2>Problem</h2>
-<p>マイヅ大学にある大規模クラスタ†型スーパーコンピュータ（通称「SAKURA」）のクラスタは、$N$台のコンピュータのノードと$M$本の相互に通信が可能な物理的通信路で構成される。また、各ノードには1から$N$までの識別番号が割り当てられている。</p>
+<p>マイヅ大学にある大規模クラスタ<sup>†</sup>型スーパーコンピュータ（通称「SAKURA」）のクラスタは、$N$台のコンピュータのノードと$M$本の相互に通信が可能な物理的通信路で構成される。また、各ノードには1から$N$までの識別番号が割り当てられている。</p>
 
 <p>この度SAKURAの利用を大学関係者だけでなく、県内の企業にも認めることとなった。それに伴い、SAKURAを構成する各ノードを点検する必要がある。しかし、SAKURAの利用スケジュールは数ヶ月先まで埋まっているので、点検中もシステム全体を停止させることはできない。そこで、ノードを1日に1台ずつ順番に点検する。</p>
 
@@ -19,6 +19,8 @@
 <p>複数のクラスタに分断された場合、それらの中で最も「性能値」の高いクラスタのみを運用する。各クラスタの「性能値」はそれを構成する各ノードに設定された「性能値」の和で表される。</p>
 
 <p>SAKURAを構成するノードの数、通信路の本数と各ノードに設定された「性能値」が与えられるので、$i$日目の点検中に運用されるクラスタの「性能値」を出力せよ。</p>
+
+<p>†：複数のコンピュータを結合してひとまとまりにしたシステムのこと</p>
 
 <h2>Input</h2>
 <p>入力は以下の形式で与えられる。</p>
