--- a/HTML/I.html
+++ b/HTML/I.html
@@ -35,7 +35,7 @@ $u_M$ $v_M$<br>
 <p>
     1行目にクラスタを構成するノードの数$N$と通信路の本数$M$が空白区切りで与えられる。<br>
     2行目には各ノードの「性能値」を表す$N$個の整数が空白区切りで与えられる。$i$番目の整数$w_i$はノード$i$の「性能値」を表す。<br>
-    3行目からの$M$行には各通信路がつなぐ2つのノードの識別番号が空白区切りで与えられる。2+$j$行目の入力では、通信路がノード$u_j$とノード$v_j$を相互につなぐことを表す。
+    3行目からの$M$行には各通信路がつなぐ2つのノードの識別番号が空白区切りで与えられる。2+$i$行目の入力では、通信路がノード$u_i$とノード$v_i$を相互につなぐことを表す。
 </p>
 
 <h2>Constraints</h2>
@@ -44,7 +44,8 @@ $u_M$ $v_M$<br>
     <li>$2 \leq N \leq 10^5$</li>
     <li>$N-1 \leq M \leq min(\frac{N\times(N-1)}{2},10^5)$</li>
     <li>$1 \leq w_i \leq 10^6$</li>
-    <li>$1 \leq u_j, v_j \leq 300$</li>
+    <li>$1 \leq u_i, v_i \leq N, u_i \ne v_i$</li>
+    <li>$(u_i,v_i) \ne (u_j,v_j), (u_i,v_i) \ne (v_j,u_j)$</li>
 </ul>
 
 <h2>Output</h2>
