--- a/HTML/B.html
+++ b/HTML/B.html
@@ -17,7 +17,7 @@
   <ul>
     <li>休暇一つにつき一つ混雑度<var>S<sub>i</sub><var>が与えられる。休暇中の混雑度<var>s</var>は毎日<var>S<sub>i</sub></var>である。</li>
     <li>休暇の影響により休暇初日/最終日から<var>a</var>日前/<var>a</var>日後の混雑度<var>s</var>は<var>max(S<sub>i</sub>-a,0)<var>となる。</li>
-    <li>ある日の混雑度<var>s</var>が一つに定まらない場合は一番大きい混雑度<var>s</var>をその日の混雑度sにする。</li>
+    <li>ある日の混雑度<var>s</var>が一つに定まらない場合は一番大きい混雑度<var>s</var>をその日の混雑度<var>s</var>にする。</li>
   </ul>
   ニートくんが出かけようと思える1年の中で一番小さい混雑度<var>s</var>を出力してください。
 </p>
