--- a/HTML/B.html
+++ b/HTML/B.html
@@ -10,7 +10,7 @@
   ニートくんは1年12か月毎月30日まで計360日の世界線で暮らしています。<br>
   その世界では毎年同じ期間の<var>N</var>個の休暇が世界中の人に適用されていました。休暇は<var>M<sub>i</sub></var>月<var>D<sub>i</sub></var>日から始まる連続した<var>V<sub>i</sub></var>日間です。<br>
   しかしニートくんはニートなので休暇に関係なく毎日休みです。<br>
-  ある日ニートくんは珍しく出かけようと思いましたが人混みが嫌いなので休暇が原因で混雑する日はなるだけ外に出たくありません。<br>
+  ある日ニートくんは珍しく出かけようと思いましたが人混みが嫌いなので休暇が原因で混雑する日はなるべく外に出たくありません。<br>
 </p>
 <p>
   そこでニートくんは休暇情報を元に以下の方法で混雑度<var>s</var>を計算し混雑度<var>s</var>が一番少ない日を探そうとしています。
@@ -21,7 +21,7 @@
   </ul>
   ニートくんが出かけようと思える1年の中で一番小さい混雑度<var>s</var>を出力してください。
 </p>
-      
+
 <p>
   休暇は年を跨ぐ事があります。
 </p>
