--- a/HTML/D.html
+++ b/HTML/D.html
@@ -3,13 +3,13 @@
 <script language="JavaScript" type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
 </script>
 
-<h1>Problem H: Max Pig Noodle</h1>
+<h1>Problem D: Piano</h1>
 <h2>Problem</h2>
 <p>
 がっちょくんはピアノを弾こうとしている。今がっちょくんはある楽譜を持っており、その楽譜に従って弾く。
 </p>
 <p>
-楽譜には、ある時刻にどの鍵盤を弾くべきかが記載されている。今回使う楽譜には和音†はなく、また音の長さも考えないことにする。
+楽譜には、ある時刻にどの鍵盤を弾くべきかを示す音符が時系列順に記載されている。今回使う楽譜には和音(複数の鍵盤を押したときに出る音)は現れず、また音の長さも考えないことにする。
 </p>
 <p>
 がっちょくんはピアノを弾くとき、以下のルールに従う。
@@ -23,7 +23,7 @@
 </ul>
 </p>
 <p>
-がっちょくんが使う楽譜が与えられるので、その楽譜を演奏しきるには、演奏する方の腕に最小何本の指が必要かを求めよ。ただし、必要な指は6本以上になることがあることに注意せよ。
+がっちょくんが使う楽譜が与えられるので、ルールに従ってその楽譜を演奏しきるには、演奏する方の腕に最小何本の指が必要かを求めよ。ただし、必要な指は6本以上になることがあることに注意せよ。
 </p>
 
 
@@ -35,10 +35,12 @@
 <var>a<sub>2</sub></var>
 <var>a<sub>3</sub></var>
 ...
+<var>a<sub>i</sub></var>
+...
 <var>a<sub>N</sub></var>
 </pre>
 <p>
-1行目に楽譜に書かれている音符の総数を表す<var>N</var>が与えられる。 続く2行目からN+1行目までに時刻i(1 &le; i &le; N)に弾くべき鍵盤が最も左の鍵盤から何番目かを表す<var>a<sub>i</sub></var>が与えられる。
+1行目に、楽譜に書かれている音符の総数を表す<var>N</var>が与えられる。 続く2行目からN+1行目までに、時刻i(1 &le; i &le; N)に弾くべき鍵盤が最も左の鍵盤から何番目かを表す<var>a<sub>i</sub></var>が与えられる。
 </p>
 
 <h2>Constraints</h2>
