--- a/HTML/K.html
+++ b/HTML/K.html
@@ -13,7 +13,7 @@
 チノルチョコではチョコレートを搬送するためのトラックを1台しか所有していなく、1台のトラックでは1店分のチョコレートしか運べないので、店から別の店へ移動する際に工場をすべてを回ってチョコレートを回収してから移動する。
 </p>
 <p>
-ある店から別の店へ移動する時の移動距離の最大が最小になるように配置した時の最大の移動距離を求めよ。
+ある店から別の店へ移動する時の最小移動距離の最大が最小になるように配置した時の最大の移動距離を求めよ。
 </p>
 <h2>Input</h2>
 
