--- a/HTML/J.html
+++ b/HTML/J.html
@@ -7,7 +7,7 @@
 <script language="JavaScript" type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
 </script>
 
-<h1>Problem I: Cluster Network</h1>
+<h1>Problem J: Cluster Network</h1>
 
 <h2>Problem</h2>
 <p>マイヅ大学にある大規模クラスタ<sup>†</sup>型スーパーコンピュータ（通称「SAKURA」）のクラスタは、$N$台のコンピュータのノードと$M$本の相互に通信が可能な物理的通信路で構成される。また、各ノードには1から$N$までの識別番号が割り当てられている。</p>
