--- a/HTML/J.html
+++ b/HTML/J.html
@@ -14,13 +14,13 @@
 
 <p>この度SAKURAの利用を大学関係者だけでなく、県内の企業にも認めることとなった。それに伴い、SAKURAを構成する各ノードを点検する必要がある。しかし、SAKURAの利用スケジュールは数ヶ月先まで埋まっているので、点検中もシステム全体を停止させることはできない。そこで、ノードを1日に1台ずつ順番に点検する。</p>
 
-<p>点検は$N$日にわたって行われ、$i$日目にノード$i$を点検する。この際、点検するノードとそのノードに直接接続している通信路をSAKURAのクラスタから切り離す。このとき、残ったSAKURAのクラスタ全体は1つ以上のクラスタに分断されるので、そのうちのいずれかをSAKURAの代わりに運用する。</p>
+<p>点検は$N$日にわたって行われ、$i$日目にノード$i$を点検する。このとき、点検するノードとそのノードに直接接続している通信路をSAKURAのクラスタから切り離す。それによって、SAKURAのクラスタ全体は1つ以上のクラスタに分断されるので、そのうちのいずれかをSAKURAの代わりに運用する。当然、点検中のノードは運用することができない。</p>
 
-<p>複数のクラスタに分断された場合、それらの中で最も「性能値」の高いクラスタのみを運用する。各クラスタの「性能値」はそれを構成する各ノードに設定された「性能値」の和で表される。</p>
+<p>複数の非連結なクラスタに分断された場合、それらの中で最も「性能値」の高いクラスタのみを運用する。各クラスタの「性能値」はそれを構成する各ノードに設定された「性能値」の和で表される。</p>
 
 <p>SAKURAを構成するノードの数、通信路の本数と各ノードに設定された「性能値」が与えられるので、$i$日目の点検中に運用されるクラスタの「性能値」を出力せよ。</p>
 
-<p>†：複数のコンピュータを結合してひとまとまりにしたシステムのこと</p>
+<p>†：複数のコンピュータを結合してひとまとまりにしたシステムのこと。ここでは、物理的通信路で連結なノードの集合とする。</p>
 
 <h2>Input</h2>
 <p>入力は以下の形式で与えられる。</p>
