--- a/HTML/M.html
+++ b/HTML/M.html
@@ -94,87 +94,57 @@ $A_{N,1}$ $A_{N,2}$ ... $A_{N,N}$<br>
 
 <h2>Sample Input 1</h2>
 <pre>
-9 10
-1 2 3 4 5 6 7 8 9
-1 2
-2 3
-2 4
-3 4
-4 5
-4 6
-2 7
-7 8
-7 9
-9 1
+5
+oxooo
+oxooo
+oxooo
+xxxxx
+oxooo
 </pre>
 
 <h2>Sample Output 1</h2>
 <pre>
-44
-25
-42
-30
-40
-39
-30
-37
-36
+1
+4
+2
 </pre>
 
 <h2>Sample Input 2</h2>
 <pre>
-16 19
-1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16
-1 2
-2 3
-3 4
-3 5
-1 6
-6 7
-6 8
-7 8
-8 9
-8 10
-10 11
-11 12
-12 10
-1 13
-13 14
-14 15
-15 13
-14 16
-15 16
+9
+oxoooooxo
+oxxxxxxxx
+oxoooooxo
+xxxxxxxxx
+oxoxooooo
+oxxxxxxxx
+oxoxoxooo
+oxoxxxxxx
+oxoxoxooo
 </pre>
 
 <h2>Sample Output 2</h2>
 <pre>
-63
-122
-124
-132
-131
-73
-129
-86
-127
-103
-125
-124
-78
-122
-121
-120
+4
+4
+2
+2
+8
+6
+4
+8
+6
 </pre>
 
 <h2>Sample Input 3</h2>
 <pre>
-2 1
-1 2
-1 2
+3
+oxx
+oxx
+ooo
 </pre>
 
 <h2>Sample Output 3</h2>
 <pre>
-2
-1
+-1
 </pre>
