--- a/HTML/M.html
+++ b/HTML/M.html
@@ -78,7 +78,7 @@ $A_{N,1}$ $A_{N,2}$ ... $A_{N,N}$<br>
 <p>入力は以下の条件を満たす。</p>
 <ul>
     <li>$3 \le N \le 2047$</li>
-    <li>$N$は必ず偶数である</li>
+    <li>$N$は必ず奇数である</li>
     <li>$A_{i,j}$は'o'か'x'である</li>
  
 </ul>
