--- a/HTML/J.html
+++ b/HTML/J.html
@@ -49,9 +49,7 @@ $u_M$ $v_M$<br>
 </ul>
 
 <h2>Output</h2>
-<p>
-$N$日間の点検中に運用されるクラスタの「性能値」を改行区切りで出力する。$i$行目には$i$日目のクラスタの「性能値」を出力する。
-</p>
+<p>$N$日間の点検中に運用されるクラスタの「性能値」を改行区切りで出力する。$i$行目には$i$日目のクラスタの「性能値」を出力する。</p>
 
 <h2>Sample Input 1</h2>
 <pre>
