--- a/HTML/J.html
+++ b/HTML/J.html
@@ -34,8 +34,8 @@ $u_M$ $v_M$<br>
 </p>
 <p>
     1行目にクラスタを構成するノードの数$N$と通信路の本数$M$が空白区切りで与えられる。<br>
-    2行目には各ノードの「性能値」を表す$N$個の整数が空白区切りで与えられる。$i$番目の整数$w_i$はノード$i$の「性能値」を表す。<br>
-    3行目からの$M$行には各通信路がつなぐ2つのノードの識別番号が空白区切りで与えられる。2+$i$行目の入力では、通信路がノード$u_i$とノード$v_i$を相互につなぐことを表す。
+    2行目には各ノードの「性能値」を表す$N$個の整数が空白区切りで与えられる。$i$番目の整数$w_i$はノード$i$の「性能値」を表す。（$1 \leq i \leq N$）<br>
+    3行目からの$M$行には各通信路がつなぐ2つのノードの識別番号が空白区切りで与えられる。2+$i$行目の入力では、通信路がノード$u_i$とノード$v_i$を相互につなぐことを表す。（$1 \leq i \leq M$）
 </p>
 
 <h2>Constraints</h2>
@@ -46,10 +46,11 @@ $u_M$ $v_M$<br>
     <li>$1 \leq w_i \leq 10^6$</li>
     <li>$1 \leq u_i, v_i \leq N, u_i \ne v_i$</li>
     <li>$(u_i,v_i) \ne (u_j,v_j), (u_i,v_i) \ne (v_j,u_j)$</li>
+    <li>$入力は全て整数$</li>
 </ul>
 
 <h2>Output</h2>
-<p>$N$日間の点検中に運用されるクラスタの「性能値」を改行区切りで出力する。$i$行目には$i$日目のクラスタの「性能値」を出力する。</p>
+<p>出力は$N$行からなる。<br>$i$行目には、$i$日目に運用されるクラスタの「性能値」を出力する。（$1 \leq i \leq N$）<br>出力の最後には改行を入れること。</p>
 
 <h2>Sample Input 1</h2>
 <pre>
