--- a/HTML/G.html
+++ b/HTML/G.html
@@ -38,7 +38,7 @@ $d_{21}$ $d_{22}$ ... $d_{2N}$<br>
 $d_{N1}$ $d_{N2}$ ... $d_{NN}$<br>
 </p>
 <p>
-1行目に町の数$N$と所持金X,お菓子を買うのに使うことができる上限金額Yが空白区切りで与えられる。<br>
+1行目に町の数$N$と所持金X,お菓子を買ために使うことができる上限金額Yが空白区切りで与えられる。<br>
 2行目からは$N$個の各駄菓子屋の情報を与えられる。<br>
 続く$N$行$N$列に町$i$と町$j$を直接行き来するために必要な金額$d_{ij}$が空白区切りで与えられる。<br>
 </p>
