--- a/HTML/C.html
+++ b/HTML/C.html
@@ -3,10 +3,10 @@
 <script language="JavaScript" type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
 </script>
 
-<h1>Problem D: Piano</h1>
+<h1>Problem C: Palindrome</h1>
 <h2>Problem</h2>
 <p>
-太郎くんはそれぞれの長さがLの文字列をN個持っている。太郎くんは回文が大好きなので、N個のうちいくつかの文字列を選んで好きな順番に並べることで、できるだけ長い回文を作りたい。
+太郎くんはそれぞれの長さが<var>L</var>の文字列をN個持っている。太郎くんは回文が大好きなので、<var>N</var>個のうちいくつかの文字列を選んで好きな順番に並べることで、できるだけ長い回文を作りたい。
 </p>
 <p>
 全ての文字列は英小文字からなる文字列である
