--- a/HTML/G.html
+++ b/HTML/G.html
@@ -12,16 +12,16 @@
 <h2>Problem</h2>
 <p>
   明日はいよいよマイヅ小学校の遠足の日である。マイヅ小学校に通うがっちょくんは、楽しみのあまり明日のお菓子を買い忘れていたことに気づいた。<br>
-  しかし、がっちょくんは遠足を最大限楽しむため、お菓子にもこだわりたい。<br>
+  がっちょくんは遠足を最大限楽しむため、お菓子にもこだわりたい。<br>
 <p>
 <p>
-  がっちょくんはお母さんから$X$円のお小遣いをもらってお菓子を買いに行くが、小学校のルールで遠足に持っていくお菓子の合計金額は$Y$円までと決まっていて、$Y$円を上回るとお菓子は全て先生に取り上げられてしまう。
+  がっちょくんはお母さんから$X$円のお小遣いをもらってお菓子を買いに行く。ただし小学校のルールで遠足に持っていくお菓子の合計金額は$Y$円までと決まっていて、$Y$円を上回るとお菓子は全て先生に取り上げられてしまう。
 
 <p>
   がっちょくんの住む学区には$N$個の町と$N$個の駄菓子屋がある。各町と各駄菓子屋には1から$N$の番号が割り振られており、町$i$には駄菓子屋$i$があり、がっちょくんは町1に住んでいる。<br>
   各駄菓子屋ではいくつかのお菓子が売っていて、各お菓子には1つあたりの値段、1つあたりのがっちょくんが得られる満足度、在庫数がある。<br>
-  また、二つの町の間を移動するには公共交通機関を利用するため、町$i$からある町$j$へ直接移動するには$d_{ij}$円だけお金がかかる。ただし、同じ町内の移動にお金はかからない。<br>
-  現在がっちょくんは町1にいるとき、がっちょくんがお母さんからもらったお小遣い以内でお菓子を買って町1にある家まで帰ってくるときの最大の満足度合計を求めよ。
+  また、2つの町の間を移動するには公共交通機関を利用するため、町$i$からある町$j$へ直接移動するには$d_{ij}$円だけお金がかかる。ただし、同じ町内の移動にお金はかからない。<br>
+  今、がっちょくんは町1にいる。がっちょくんが$X$円以内でお菓子を買って町1にある家まで帰ってくるときの最大の満足度合計を求めよ。
 </p>
 
 <h2>Input</h2>
@@ -31,14 +31,14 @@ $N$ $X$ $Y$<br>
 駄菓子屋1の情報<br>
 駄菓子屋2の情報<br>
 ... <br>
-駄菓子屋Nの情報<br>
+駄菓子屋$N$の情報<br>
 $d_{11}$ $d_{12}$ ... $d_{1N}$<br>
 $d_{21}$ $d_{22}$ ... $d_{2N}$<br>
 ...<br>
 $d_{N1}$ $d_{N2}$ ... $d_{NN}$<br>
 </p>
 <p>
-1行目に町の数$N$と所持金X,お菓子を買ために使うことができる上限金額Yが空白区切りで与えられる。<br>
+1行目に町の数$N$と所持金$X$,お菓子を買うために使うことができる上限金額$Y$が空白区切りで与えられる。<br>
 2行目からは$N$個の各駄菓子屋の情報を与えられる。<br>
 続く$N$行$N$列に町$i$と町$j$を直接行き来するために必要な金額$d_{ij}$が空白区切りで与えられる。<br>
 </p>
@@ -62,7 +62,7 @@ $a_K$ $b_K$ $c_K$<br>
 <ul>
   <li>$1 \leq N \leq 14$</li>
   <li>$1 \leq X \leq 10000$</li>
-  <li>$1 \leq Y \leq min(1000,$X$)$</li>
+  <li>$1 \leq Y \leq min(1000,X)$</li>
   <li>$1 \leq K \leq 300$</li>
   <li>$1 \leq a_i \leq 1000$</li>
   <li>$1 \leq b_i \leq 1000$</li>
