--- a/HTML/G.html
+++ b/HTML/G.html
@@ -21,7 +21,7 @@
   がっちょくんの住む学区には$N$個の町と$N$個の駄菓子屋がある。各町と各駄菓子屋には1から$N$の番号が割り振られており、町$i$には駄菓子屋$i$があり、がっちょくんは町1に住んでいる。<br>
   各駄菓子屋ではいくつかのお菓子が売っていて、各お菓子には1つあたりの値段、1つあたりのがっちょくんが得られる満足度、在庫数がある。<br>
   また、2つの町の間を移動するには公共交通機関を利用するため、町$i$からある町$j$へ直接移動するには$d_{ij}$円だけお金がかかる。ただし、同じ町内の移動にお金はかからない。<br>
-  今、がっちょくんは町1にいる。がっちょくんが$X$円以内でお菓子を買って町1にある家まで帰ってくるときの最大の満足度合計を求めよ。
+  今、がっちょくんは町1にいる。がっちょくんが$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度合計を求めよ。
 </p>
 
 <h2>Input</h2>
