--- a/HTML/F.html
+++ b/HTML/F.html
@@ -3,12 +3,12 @@
 <script language="JavaScript" type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
 </script>
 
-<h1>Problem E: nCm</h1>
+<h1>Problem F: nCm</h1>
 
 <h2>Problem</h2>
 
 <p>
-  整数nが与えられた時、nCm(n個からm個選ぶ組み合わせの数)が偶数となるような最小のmを出力せよ。
+  整数<var>n</var>が与えられた時、<var>nCm</var>(異なる<var>n</var>個から<var>m</var>個選ぶ組み合わせの数)が偶数となるような最小の<var>m</var>を出力せよ。
 </p>
 
 <h2>Input</h2>
@@ -21,12 +21,12 @@
 <h2>Constraints</h2>
 <p>入力は以下の条件を満たす。</p>
 <ul>
-    <li>1 &le; <var>n</var> &le; 10^18</li>
+    <li>1 &le; <var>n</var> &le; 10<sup>18</sup></li>
 </ul>
 
 <h2>Output</h2>
 <p>
-   nCmが最小となるようなmを出力する。
+   <var>nCm</var>が最小となるような<var>m</var>を一行に出力する。
 </p>
 
 <h2>Sample Input 1</h2>
