--- a/HTML/J.html
+++ b/HTML/J.html
@@ -46,7 +46,7 @@ $u_M$ $v_M$<br>
     <li>$1 \leq w_i \leq 10^6$</li>
     <li>$1 \leq u_i, v_i \leq N, u_i \ne v_i$</li>
     <li>$(u_i,v_i) \ne (u_j,v_j), (u_i,v_i) \ne (v_j,u_j)$</li>
-    <li>$入力は全て整数$</li>
+    <li>入力は全て整数</li>
 </ul>
 
 <h2>Output</h2>
