--- a/HTML/D.html
+++ b/HTML/D.html
@@ -1,105 +1,123 @@
 <%@ page pageEncoding="UTF-8"%>
 
+<script type="text/x-mathjax-config">
+ MathJax.Hub.Config({ tex2jax: { inlineMath: [["$","$"], ["\\(","\\)"]], processEscapes: true }});
+</script>
+
 <script language="JavaScript" type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
 </script>
 
-<h1>Problem D: Piano</h1>
+<h1>Problem M: Fissure Puzzle Easy</h1>
+
 <h2>Problem</h2>
+<p>$N \times N$のグリッドがある。はじめすべてのマスは白色である。以下の手順にしたがって黒色のマスを増やしていく。</p>
+
+<p>上から偶数番目かつ、左から偶数番目であるマスの中で、白色のマスを1つ選ぶ。選んだマスを黒色に変化する。さらに、そのマスの上下左右それぞれの方向について、隣接している白色のマスも連鎖的に黒色に変化する。この連鎖はその方向に白色のマスが存在しなくなるまで続く。(以下に例を示す)</p>
 <p>
-がっちょくんはピアノを弾こうとしている。今がっちょくんはある楽譜を持っており、その楽譜に従って弾く。
-</p>
-<p>
-楽譜には、ある時刻にどの鍵盤を弾くべきかを示す音符が時系列順に記載されている。今回使う楽譜には和音(複数の鍵盤を押したときに出る音)は現れず、また音の長さも考えないことにする。
-</p>
-<p>
-がっちょくんはピアノを弾くとき、以下のルールに従う。
-<ul>
-  <li>片手のみで弾く</li>
-  <li>指一本で鍵盤ひとつを弾く</li>
-  <li>最初の音はどの指でも弾ける</li>
-  <li>前の音より高い音を弾くとき、前の音を弾いた指よりもひとつ以上右にある指を使う</li>
-  <li>前の音より低い音を弾くとき、前の音を弾いた指よりもひとつ以上左にある指を使う</li>
-  <li>前の音と同じ高さの音を弾くとき、前の音を弾いた指と同じ指を使う</li>
-</ul>
-</p>
-<p>
-がっちょくんが使う楽譜が与えられるので、ルールに従ってその楽譜を演奏しきるには、演奏する方の腕に最小何本の指が必要かを求めよ。ただし、必要な指は6本以上になることがあることに注意せよ。
+□□□□□□□□□<br>
+□□□□□□□□□<br>
+□□□□□□□□□<br>
+□□□□□□□□□<br>
+□□□□□□□□□<br>
+□□□□□□□□□<br>
+□□□□□□□□□<br>
+□□□□□□□□□<br>
+□□□□□□□□□<br>
+↓上から4番目左から6番目を選ぶ<br>
+□□□□□■□□□<br>
+□□□□□■□□□<br>
+□□□□□■□□□<br>
+■■■■■■■■■<br>
+□□□□□■□□□<br>
+□□□□□■□□□<br>
+□□□□□■□□□<br>
+□□□□□■□□□<br>
+□□□□□■□□□<br>
+↓上から2番目左から2番目を選ぶ<br>
+□■□□□■□□□<br>
+■■■■■■□□□<br>
+□■□□□■□□□<br>
+■■■■■■■■■<br>
+□□□□□■□□□<br>
+□□□□□■□□□<br>
+□□□□□■□□□<br>
+□□□□□■□□□<br>
+□□□□□■□□□<br>
+↓上から6番目左から8番目を選ぶ<br>
+□■□□□■□□□<br>
+■■■■■■□□□<br>
+□■□□□■□□□<br>
+■■■■■■■■■<br>
+□□□□□■□■□<br>
+□□□□□■■■■<br>
+□□□□□■□■□<br>
+□□□□□■□■□<br>
+□□□□□■□■□<br>
 </p>
 
+<p>
+あなたは上から$i$番目で左から$j$番目のマスの色が$A_{i,j}$であるグリッドを作りたい。マスを選ぶ最小の回数を求めよ。
+</p>
 
 <h2>Input</h2>
 <p>入力は以下の形式で与えられる。</p>
-<pre>
-<var>N</var>
-<var>a<sub>1</sub></var>
-<var>a<sub>2</sub></var>
-<var>a<sub>3</sub></var>
-...
-<var>a<sub>i</sub></var>
-...
-<var>a<sub>N</sub></var>
-</pre>
 <p>
-1行目に、楽譜に書かれている音符の総数を表す<var>N</var>が与えられる。 続く2行目からN+1行目までに、時刻i(1 &le; i &le; N)に弾くべき鍵盤が最も左の鍵盤から何番目かを表す<var>a<sub>i</sub></var>が与えられる。
+$N$<br>
+$A_{1,1}$ $A_{1,2}$ ... $A_{1,N}$<br>
+$A_{2,1}$ $A_{2,2}$ ... $A_{2,N}$<br>
+...<br>
+$A_{N,1}$ $A_{N,2}$ ... $A_{N,N}$<br>
+</p>
+
+<p>
+  $A_{i,j}$が'o'であるときは上から$i$番目、左から$j$番目のマスを白色のマスにしたいこと表し、'x'のときはは黒色のマスにしたいこと表す。
+
 </p>
 
 <h2>Constraints</h2>
 <p>入力は以下の条件を満たす。</p>
 <ul>
-    <li>1 &le; <var>N</var> &le; 10<sup>5</sup></li>
-    <li>0 &le; <var>a<sub>i</sub></var> &le; 10<sup>9</sup></li>
+    <li>$3 \le N \le 127$</li>
+    <li>$N$は必ず奇数である</li>
+    <li>$A_{i,j}$は'o'か'x'である</li>
+    <li>必ず作ることができるような入力しか与えられないことが保証される。</li> 
 </ul>
 
 <h2>Output</h2>
 <p>
-がっちょくんが与えられた楽譜を上記ルールに従って弾くために必要な最小の指の本数を1行に出力せよ。
+  1行目にマスを選ぶ回数の最小値を出力せよ。
 </p>
 
 <h2>Sample Input 1</h2>
 <pre>
-3
-2
 5
-1
+oxooo
+oxooo
+oxooo
+xxxxx
+oxooo
 </pre>
 
 <h2>Sample Output 1</h2>
 <pre>
-2
+1
 </pre>
-<p>
-<p>
-この場合、図1の&#9312;、&#9313;	、&#9314;	の順で鍵盤を弾く。指が2本あると、左側の指で鍵盤2を、右側の指で鍵盤5を、また左側の指で鍵盤1を弾くことができる。
-<figure>
-<img src="./img/keyboard.png" alt="Sample1の図解" capton>
-<legend>図1: Sample1 の図解</legend>
-</figure>
-</p>
 
 <h2>Sample Input 2</h2>
 <pre>
-5
-4
-5
-2
-1
-3
+9
+oxoooooxo
+oxxxxxxxx
+oxoooooxo
+xxxxxxxxx
+oxoxooooo
+oxxxxxxxx
+oxoxoxooo
+oxoxxxxxx
+oxoxoxooo
 </pre>
 
 <h2>Sample Output 2</h2>
 <pre>
-3
-</pre>
-
-<h2>Sample Input 3</h2>
-<pre>
-3
 4
-4
-4
-</pre>
-
-<h2>Sample Output 3</h2>
-<pre>
-1
 </pre>
