--- a/HTML/B.html
+++ b/HTML/B.html
@@ -30,7 +30,7 @@
 <p>入力は以下の形式で与えられる。</p>
 <pre>
   <var>N</var>
-  <var>M<sub>1</sub></var> <var>D<sub>1</sub></var> <var>V<sub>1</sub></var> <var>S<sub>1</sub></var>
+  <var>M<sub>1</sub></var> <var>D<sub>1</sub></var> <var>S<sub>1</sub></var> <var>V<sub>1</sub></var>
   <var>M<sub>2</sub></var> <var>D<sub>2</sub></var> <var>S<sub>2</sub></var> <var>V<sub>2</sub></var>
   ...
   <var>M<sub>N</sub></var> <var>D<sub>N</sub></var> <var>S<sub>N</sub></var> <var>V<sub>N</sub></var>
