--- a/HTML/E.html
+++ b/HTML/E.html
@@ -40,7 +40,7 @@
 <var>a<sub>N</sub></var>
 </pre>
 <p>
-1行目に、楽譜に書かれている音符の総数を表す<var>N</var>が与えられる。 続く2行目からN+1行目までに、時刻i(1 &le; i &le; N)に弾くべき鍵盤が最も左の鍵盤から何番目かを表す<var>a<sub>i</sub></var>が与えられる。
+1行目に、楽譜に書かれている音符の総数を表す<var>N</var>が与えられる。 続く2行目から<var>N</var>+1行目までに、時刻i(1 &le; <var>i</var> &le; <var>N</var>)に弾くべき鍵盤が最も左の鍵盤から何番目かを表す<var>a<sub>i</sub></var>が与えられる。
 </p>
 
 <h2>Constraints</h2>
