--- a/HTML/E.html
+++ b/HTML/E.html
@@ -3,7 +3,7 @@
 <script language="JavaScript" type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
 </script>
 
-<h1>Problem D: Piano</h1>
+<h1>Problem E: Piano</h1>
 <h2>Problem</h2>
 <p>
 がっちょくんはピアノを弾こうとしている。今がっちょくんはある楽譜を持っており、その楽譜に従って弾く。
