--- a/HTML/D.html
+++ b/HTML/D.html
@@ -7,7 +7,7 @@
 <script language="JavaScript" type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
 </script>
 
-<h1>Problem M: Fissure Puzzle Easy</h1>
+<h1>Problem D: Fissure Puzzle Easy</h1>
 
 <h2>Problem</h2>
 <p>$N \times N$のグリッドがある。はじめすべてのマスは白色である。以下の手順にしたがって黒色のマスを増やしていく。</p>
