--- a/HTML/L.html
+++ b/HTML/L.html
@@ -45,10 +45,10 @@ $x_Q$ $y_Q$ $z_Q$<br>
   <li>$1 \le b_i \le 1000000000$</li>
   <li>$1 \le x_i \le 6$</li>
 <li>$1 \le y_i \le N $ ($1 \le x_i \le 4$のとき)</li>
-<li>$yi = -1$ ($5 \le xi \le 6$のとき)</li>
-<li>$1 \le zi \le 1000000000$ ($1 \le xi \le 2$のとき)</li>
-<li>$yi \le zi \le N$ ($3 \le xi \le 4$のとき)</li>
-<li>$zi = -1$ ($5 \le xi \le 6$のとき)</li>
+<li>$y_i = -1$ ($5 \le x_i \le 6$のとき)</li>
+<li>$1 \le z_i \le 1000000000$ ($1 \le x_i \le 2$のとき)</li>
+<li>$y_i \le z_i \le N$ ($3 \le x_i \le 4$のとき)</li>
+<li>$z_i = -1$ ($5 \le xi \le 6$のとき)</li>
 
 </ul>
 
