--- a/HTML/L.html
+++ b/HTML/L.html
@@ -48,7 +48,7 @@ $x_Q$ $y_Q$ $z_Q$<br>
 <li>$y_i = -1$ ($5 \le x_i \le 6$のとき)</li>
 <li>$1 \le z_i \le 1000000000$ ($1 \le x_i \le 2$のとき)</li>
 <li>$y_i \le z_i \le N$ ($3 \le x_i \le 4$のとき)</li>
-<li>$z_i = -1$ ($5 \le xi \le 6$のとき)</li>
+<li>$z_i = -1$ ($5 \le x_i \le 6$のとき)</li>
 
 </ul>
 
