--- a/HTML/A.html
+++ b/HTML/A.html
@@ -30,7 +30,7 @@ xx君はお気に入りの時計を持っている。<br>
 <p>
   <ul>
     <li>角度は度数法(degree)で表される。</li>
-    <li>0<=&theta;<=359</li>
+    <li>0 &le; &theta; &le; 359</li>
     </ul>
 </p>
 
@@ -41,7 +41,7 @@ xx君はお気に入りの時計を持っている。<br>
   h m<br>
   の形で一行に出力せよ。<br>
   <br>
-  時刻に午前午後の区別はないため0<=h<=11とする。<br>
+  時刻に午前午後の区別はないため0 &le; h &le; 11とする。<br>
 </p>
 
 
