--- a/HTML/C.html
+++ b/HTML/C.html
@@ -6,7 +6,7 @@
 <h1>Problem C: Palindrome</h1>
 <h2>Problem</h2>
 <p>
-太郎くんはそれぞれの長さが<var>L</var>の文字列をN個持っている。太郎くんは回文が大好きなので、<var>N</var>個のうちいくつかの文字列を選んで好きな順番に並べることで、できるだけ長い回文を作りたい。
+太郎くんはそれぞれの長さが<var>L</var>の文字列を<var>N</var>個持っている。太郎くんは回文が大好きなので、<var>N</var>個のうちいくつかの文字列を選んで好きな順番に並べることで、できるだけ長い回文を作りたい。
 </p>
 <p>
 全ての文字列は英小文字からなる文字列である
@@ -32,7 +32,7 @@
 <p>
 1行目に、文字列の数<var>N</var>と文字列の長さ<var>L</var>が与えられる。
 </p>
-<p> 続く2行目からN+1行目に文字列が与えられる。
+<p> 続く2行目から<var>N</var> &plus; 1行目に文字列が与えられる。
 </p>
 
 <h2>Constraints</h2>
