--- a/HTML/H.html
+++ b/HTML/H.html
@@ -18,12 +18,12 @@
 $N$<br>
 $a_1$ $d_1$<br>
 $a_2$ $d_2$<br>
-...
+...<br>
 $a_N$ $d_N$<br>
 </p>
 <p>
     1行目に整数$N$が与えられる。
-    続く$N$行に$i$個目の等差数列の情報$a_i$, $d_i$が与えられる。（$1 \leq i \leq N$）
+    続く$N$行に、$i$個目の等差数列の情報$a_i$, $d_i$が与えられる。（$1 \leq i \leq N$）
 </p>
 
 <h2>Constraints</h2>
@@ -31,7 +31,7 @@ $a_N$ $d_N$<br>
 <ul>
     <li>$1 \leq N \leq 10^5$</li>
     <li>$1 \leq L \leq 10^5$</li>
-    <li>$1 \leq K \leq N*L$</li>
+    <li>$1 \leq K \leq N\times L$</li>
     <li>$0 \leq a_i \leq 10^5$</li>
     <li>$1 \leq d_i \leq 10^3$</li>
     <li>入力はすべて整数</li>
@@ -55,7 +55,7 @@ $a_N$ $d_N$<br>
 25
 </pre>
 
-<p>数列Aは${0,3,6,2,4,6,4,5,6}$となる。この数列の第5項から第9項までを数列Bとすれば、数列Bの和は25となり、これが最大である。</p>
+<p>数列$A$は$0,3,6,2,4,6,4,5,6$となる。この数列の第5項から第9項までを数列$B$とすれば、数列$B$の和は25となり、これが最大である。</p>
 
 <h2>Sample Input 2</h2>
 <pre>
