--- a/HTML/A.html
+++ b/HTML/A.html
@@ -7,9 +7,9 @@
 <h2>Problem</h2>
 
 <p>
-xx君はお気に入りの時計を持っている。<br>
-ある日時計の長針が取れてしまい、どこかへなくしてしまった。しかし、xx君はその時計を使い続けたいため短針だけで時刻を読み取りたいと考えている。<br>
-短針の情報&theta;が与えられた時の時刻(時<var>h</var>、分<var>m</var>)を出力せよ。<br>
+がっちょ君はお気に入りの時計を持っている。<br>
+ある日時計の長針が取れてしまい、どこかへなくしてしまった。しかし、がっちょ君はその時計を使い続けたいため短針だけで時刻を読み取りたいと考えている。<br>
+短針の情報<var>&theta;</var>が与えられた時の時刻(時<var>h</var>、分<var>m</var>)を出力せよ。<br>
 </p>
 <p>
   <ul>
@@ -30,7 +30,7 @@ xx君はお気に入りの時計を持っている。<br>
 <p>
   <ul>
     <li>角度は度数法(degree)で表される。</li>
-    <li>0 &le; &theta; &le; 359</li>
+    <li>0 &le; <var>&theta;</var> &le; 359</li>
     </ul>
 </p>
 
@@ -38,10 +38,10 @@ xx君はお気に入りの時計を持っている。<br>
 <h2>Output</h2>
 <p>
   短針が与えられた角度をとる時の時刻を<br>
-  h m<br>
+  <var>h</var> <var>m</var><br>
   の形で一行に出力せよ。<br>
   <br>
-  時刻に午前午後の区別はないため0 &le; h &le; 11とする。<br>
+  時刻に午前午後の区別はないため0 &le; <var>h</var> &le; 11とする。<br>
 </p>
 
 
