--- a/HTML/C.html
+++ b/HTML/C.html
@@ -32,7 +32,7 @@
 <p>
 1行目に、文字列の数<var>N</var>と文字列の長さ<var>L</var>が与えられる。
 </p>
-<p> 続く2行目からN+1行目に文字列が与えられる。
+<p> 続く2行目から<var>N+1</var>>行目に文字列が与えられる。
 </p>
 
 <h2>Constraints</h2>
@@ -45,7 +45,9 @@
 
 <h2>Output</h2>
 <p>
-辞書順最小の回文を出力せよ
+最長の回文の中で辞書順最小のものを出力せよ
+</p>
+<p>
 回文が作れない場合は空行を出力せよ
 </p>
 
