--- a/HTML/C.html
+++ b/HTML/C.html
@@ -6,10 +6,7 @@
 <h1>Problem C: Palindrome</h1>
 <h2>Problem</h2>
 <p>
-太郎くんはそれぞれの長さが<var>L</var>の文字列をN個持っている。太郎くんは回文が大好きなので、<var>N</var>個のうちいくつかの文字列を選んで好きな順番に並べることで、できるだけ長い回文を作りたい。
-</p>
-<p>
-全ての文字列は英小文字からなる文字列である
+太郎くんはそれぞれの長さが<var>L</var>の文字列を<var>N</var>個持っている。太郎くんは回文が大好きなので、<var>N</var>個のうちいくつかの文字列を選んで好きな順番に並べることで、できるだけ長い回文を作りたい。
 </p>
 <p>
 太郎くんが作ることのできる回文の中で、最長のものを求めよ。複数ある場合は、そのうち辞書順で最小のものを出力せよ。
