--- a/HTML/F.html
+++ b/HTML/F.html
@@ -26,7 +26,7 @@
 
 <h2>Output</h2>
 <p>
-   <var>nCm</var>が最小となるような<var>m</var>を一行に出力する。
+   <var>nCm</var>が偶数となるような最小の<var>m</var>を一行に出力する。
 </p>
 
 <h2>Sample Input 1</h2>
