--- a/HTML/C.html
+++ b/HTML/C.html
@@ -37,15 +37,15 @@
 <ul>
     <li>1 &le; <var>N</var> &le; 1000</li>
     <li>1 &le; <var>L</var> &le; 30</li>
-    <li>a &le; <var>sに含まれる文字</var> &le; z</li>
+    <li>sは英小文字からなる文字列である</li>
 </ul>
 
 <h2>Output</h2>
 <p>
-最長の回文の中で辞書順最小のものを出力せよ
+最長の回文の中で辞書順最小のものを出力せよ。
 </p>
 <p>
-回文が作れない場合は空行を出力せよ
+回文が作れない場合は空行を出力せよ。
 </p>
 
 <h2>Sample Input 1</h2>
