--- a/HTML/C.html
+++ b/HTML/C.html
@@ -37,7 +37,7 @@
 <ul>
     <li>1 &le; <var>N</var> &le; 1000</li>
     <li>1 &le; <var>L</var> &le; 30</li>
-    <li>sは英小文字からなる文字列である</li>
+    <li>sは英小文字からなる文字列である。</li>
 </ul>
 
 <h2>Output</h2>
