--- a/HTML/A.html
+++ b/HTML/A.html
@@ -9,7 +9,7 @@
 <p>
 がっちょ君はお気に入りの時計を持っている。<br>
 ある日時計の長針が取れてしまい、どこかへなくしてしまった。しかし、がっちょ君はその時計を使い続けたいため短針だけで時刻を読み取りたいと考えている。<br>
-短針の情報<var>&theta;</var>が与えられた時の時刻(時<var>h</var>、分<var>m</var>)を出力せよ。<br>
+短針の情報<var>&theta;</var>に対する時刻(時<var>h</var>、分<var>m</var>)を出力せよ。<br>
 時計はいわゆるアナログ時計で、1から12の数字が等間隔に昇順に並んでいて、12を一番上として並んでいるものである。<br>
 </p>
 
