--- a/HTML/E.html
+++ b/HTML/E.html
@@ -9,7 +9,7 @@
 がっちょ君はピアノを弾こうとしている。今がっちょ君はある楽譜を持っており、その楽譜に従って弾く。
 </p>
 <p>
-楽譜には、ある時刻にどの鍵盤を弾くべきかを示す音符が時系列順に記載されている。今回使う楽譜には和音(複数の鍵盤を押したときに出る音)は現れず、また音の長さも考えないことにする。
+楽譜には、ある時刻にどの鍵盤を弾くべきかを示す音符が時系列順に記載されている。今回使う楽譜には和音(複数の鍵盤を押したときに出る音)は現れず、音の長さも考えないことにする。
 </p>
 <p>
 がっちょ君はピアノを弾くとき、以下のルールに従う。
