--- a/HTML/G.html
+++ b/HTML/G.html
@@ -7,21 +7,21 @@
 <script language="JavaScript" type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
 </script>
 
-<h1>Problem G: Ensoku</h1>
+<h1>Problem G: Picnic</h1>
 
 <h2>Problem</h2>
 <p>
-  明日はいよいよマイヅ小学校の遠足の日である。マイヅ小学校に通うがっちょくんは、楽しみのあまり明日のお菓子を買い忘れていたことに気づいた。<br>
-  がっちょくんは遠足を最大限楽しむため、お菓子にもこだわりたい。<br>
+  明日はいよいよマイヅ小学校の遠足の日である。マイヅ小学校に通うがっちょ君は、楽しみのあまり明日のお菓子を買い忘れていたことに気づいた。<br>
+  がっちょ君は遠足を最大限楽しむため、お菓子にもこだわりたい。<br>
 <p>
 <p>
-  がっちょくんはお母さんから$X$円のお小遣いをもらってお菓子を買いに行く。ただし小学校のルールで遠足に持っていくお菓子の合計金額は$Y$円までと決まっていて、$Y$円を上回るとお菓子は全て先生に取り上げられてしまう。
+  がっちょ君はお母さんから$X$円のお小遣いをもらってお菓子を買いに行く。ただし小学校のルールで遠足に持っていくお菓子の合計金額は$Y$円までと決まっていて、$Y$円を上回るとお菓子は全て先生に取り上げられてしまう。
 
 <p>
-  がっちょくんの住む学区には$N$個の町と$N$個の駄菓子屋がある。各町と各駄菓子屋には1から$N$の番号が割り振られており、町$i$には駄菓子屋$i$があり、がっちょくんは町1に住んでいる。<br>
-  各駄菓子屋ではいくつかのお菓子が売っていて、各お菓子には在庫数、1つあたりの値段、1つ買うごとにがっちょくんが得られる満足度がある。<br>
+  がっちょ君の住む学区には$N$個の町と$N$個の駄菓子屋がある。各町と各駄菓子屋には1から$N$の番号が割り振られており、町$i$には駄菓子屋$i$があり、がっちょ君は町1に住んでいる。<br>
+  各駄菓子屋ではいくつかのお菓子が売っていて、各お菓子には在庫数、1つあたりの値段、1つ買うごとにがっちょ君が得られる満足度がある。<br>
   また、2つの町の間を移動するには公共交通機関を利用するため、町$i$からある町$j$へ直接移動するには$d_{ij}$円だけお金がかかる。ただし、同じ町内の移動にお金はかからない。<br>
-  今、がっちょくんは町1にいる。がっちょくんが$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度合計を求めよ。
+  今、がっちょ君は町1にいる。がっちょ君が$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度合計を求めよ。
 </p>
 
 <h2>Input</h2>
@@ -73,7 +73,7 @@ $a_K$ $b_K$ $c_K$<br>
 
 <h2>Output</h2>
 <p>
-  がっちょくんが$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度合計を1行に出力せよ。
+  がっちょ君が$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度合計を1行に出力せよ。
 </p>
 
 <h2>Sample Input 1</h2>
