--- a/HTML/A.html
+++ b/HTML/A.html
@@ -35,7 +35,7 @@
 <p>
   短針が与えられた角度をとる時の時刻を<br>
   <var>h</var> <var>m</var><br>
-  の形で一行に出力せよ。<br>
+  の形で1行に出力する。<br>
   <br>
   時刻に午前午後の区別はないため0 &le; <var>h</var> &le; 11とする。<br>
 </p>
