fix seyo -> suru

--- a/HTML/E.html
+++ b/HTML/E.html
@@ -49,7 +49,7 @@
 
 <h2>Output</h2>
 <p>
-がっちょ君が与えられた楽譜を上記ルールに従って弾くために必要な最小の指の本数を1行に出力せよ。
+がっちょ君が与えられた楽譜を上記ルールに従って弾くために必要な最小の指の本数を1行に出力する。
 </p>
 
 <h2>Sample Input 1</h2>
