--- a/HTML/G.html
+++ b/HTML/G.html
@@ -73,7 +73,7 @@ $a_K$ $b_K$ $c_K$<br>
 
 <h2>Output</h2>
 <p>
-  がっちょ君が$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度合計を1行に出力せよ。
+  がっちょ君が$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度合計を1行に出力する。
 </p>
 
 <h2>Sample Input 1</h2>
