--- a/HTML/F.html
+++ b/HTML/F.html
@@ -8,7 +8,7 @@
 <h2>Problem</h2>
 
 <p>
-  整数<var>n</var>が与えられた時、<var>nCm</var>(異なる<var>n</var>個から<var>m</var>個選ぶ組み合わせの数)が偶数となるような最小の<var>m</var>を出力せよ。
+  整数<var>n</var>が与えられた時、<var>nCm</var>(異なる<var>n</var>個の物から<var>m</var>個の物を選ぶ組み合わせの数)が偶数となるような最小の<var>m</var>を出力せよ。
 </p>
 
 <h2>Input</h2>
@@ -26,7 +26,7 @@
 
 <h2>Output</h2>
 <p>
-   <var>nCm</var>が偶数となるような最小の<var>m</var>を一行に出力する。
+   <var>nCm</var>が偶数となるような最小の<var>m</var>を1行に出力する。
 </p>
 
 <h2>Sample Input 1</h2>
