--- a/HTML/G.html
+++ b/HTML/G.html
@@ -18,10 +18,10 @@
   がっちょ君はお母さんから$X$円のお小遣いをもらってお菓子を買いに行く。ただし小学校のルールで遠足に持っていくお菓子の合計金額は$Y$円までと決まっていて、$Y$円を上回るとお菓子は全て先生に取り上げられてしまう。
 
 <p>
-  がっちょ君の住む学区には$N$個の町と$N$個の駄菓子屋がある。各町と各駄菓子屋には1から$N$の番号が割り振られており、町$i$には駄菓子屋$i$があり、がっちょ君は町1に住んでいる。<br>
-  各駄菓子屋ではいくつかのお菓子が売っていて、各お菓子には在庫数、1つあたりの値段、1つ買うごとにがっちょ君が得られる満足度がある。<br>
+  がっちょ君の住む学区には$N$個の町があり、各町には1軒の駄菓子屋がある。各町と各駄菓子屋には1から$N$の番号が割り振られており、町$i$には駄菓子屋$i$がある。がっちょ君は町1に住んでいる。<br>
+  各駄菓子屋ではいくつかのお菓子が売っていて、1つあたりの値段、1つ買うごとにがっちょ君が得られる満足度が決まっている。また各お菓子には在庫数がある。<br>
   また、2つの町の間を移動するには公共交通機関を利用するため、町$i$からある町$j$へ直接移動するには$d_{ij}$円だけお金がかかる。ただし、同じ町内の移動にお金はかからない。<br>
-  今、がっちょ君は町1にいる。がっちょ君が$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度合計を求めよ。
+  今、がっちょ君は町1にいる。がっちょ君が$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度の合計を求めよ。
 </p>
 
 <h2>Input</h2>
@@ -39,11 +39,11 @@ $d_{N1}$ $d_{N2}$ ... $d_{NN}$<br>
 </p>
 <p>
 1行目に町の数$N$と所持金$X$,お菓子を買うために使うことができる上限金額$Y$が空白区切りで与えられる。<br>
-2行目からは$N$個の各駄菓子屋の情報を与えられる。<br>
+2行目からは$N$個の各駄菓子屋の情報が与えられる。<br>
 続く$N$行$N$列に町$i$と町$j$を直接行き来するために必要な金額$d_{ij}$が空白区切りで与えられる。<br>
 </p>
 
-<p>各駄菓子屋は以下の形式をしている。</p>
+<p>各駄菓子屋の情報は以下の形式で与えられる。</p>
 <p>
 $K$<br>
 $a_1$ $b_1$ $c_1$<br>
@@ -52,7 +52,7 @@ $a_2$ $b_2$ $c_2$<br>
 $a_K$ $b_K$ $c_K$<br>
 </p>
 <p>
-1行目に駄菓子屋の売っているお菓子の種類数$K$が与えられる。<br>
+1行目にその駄菓子屋で売っているお菓子の種類の数$K$が与えられる。<br>
 続く$K$行にお菓子の1つの値段$a_i$,1つあたりの満足度$b_i$、在庫数$c_i$が空白区切りで与えられる。 
 </p>
 
@@ -73,7 +73,7 @@ $a_K$ $b_K$ $c_K$<br>
 
 <h2>Output</h2>
 <p>
-  がっちょ君が$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度合計を1行に出力する。
+  がっちょ君が$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度の合計を1行に出力する。
 </p>
 
 <h2>Sample Input 1</h2>
@@ -149,7 +149,7 @@ $a_K$ $b_K$ $c_K$<br>
 9 24 14 0
 </pre>
 
-<h2>Sample Output 3</h2>
+<h2>Sample Output 4</h2>
 <pre>
 34
 </pre>
