--- a/HTML/G.html
+++ b/HTML/G.html
@@ -18,7 +18,7 @@
   がっちょ君はお母さんから$X$円のお小遣いをもらってお菓子を買いに行く。ただし小学校のルールで遠足に持っていくお菓子の合計金額は$Y$円までと決まっていて、$Y$円を上回るとお菓子は全て先生に取り上げられてしまう。
 
 <p>
-  がっちょ君の住む学区には$N$個の町があり、各町には1軒の駄菓子屋がある。各町と各駄菓子屋には1から$N$の番号が割り振られており、町$i$には駄菓子屋$i$がある。がっちょ君は町1に住んでいる。<br>
+  がっちょ君の住む学区には$N$個の町があり、各町には1軒の駄菓子屋がある。各町と各駄菓子屋には1から$N$の番号が割り振られていて、がっちょ君は町1に住んでいる。<br>
   各駄菓子屋ではいくつかのお菓子が売っていて、1つあたりの値段、1つ買うごとにがっちょ君が得られる満足度が決まっている。また各お菓子には在庫数がある。<br>
   また、2つの町の間を移動するには公共交通機関を利用するため、町$i$からある町$j$へ直接移動するには$d_{ij}$円だけお金がかかる。ただし、同じ町内の移動にお金はかからない。<br>
   今、がっちょ君は町1にいる。がっちょ君が$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度の合計を求めよ。
@@ -28,10 +28,10 @@
 <p>入力は以下の形式ですべて整数で与えられる。</p>
 <p>
 $N$ $X$ $Y$<br>
-駄菓子屋1の情報<br>
-駄菓子屋2の情報<br>
+町1の駄菓子屋の情報<br>
+町2駄菓子屋の情報<br>
 ... <br>
-駄菓子屋$N$の情報<br>
+町$N$駄菓子屋の情報<br>
 $d_{11}$ $d_{12}$ ... $d_{1N}$<br>
 $d_{21}$ $d_{22}$ ... $d_{2N}$<br>
 ...<br>
@@ -43,7 +43,7 @@ $d_{N1}$ $d_{N2}$ ... $d_{NN}$<br>
 続く$N$行$N$列に町$i$と町$j$を直接行き来するために必要な金額$d_{ij}$が空白区切りで与えられる。<br>
 </p>
 
-<p>各駄菓子屋の情報は以下の形式で与えられる。</p>
+<p>各町の駄菓子屋の情報は以下の形式で与えられる。</p>
 <p>
 $K$<br>
 $a_1$ $b_1$ $c_1$<br>
