--- a/HTML/G.html
+++ b/HTML/G.html
@@ -29,9 +29,9 @@
 <p>
 $N$ $X$ $Y$<br>
 町1の駄菓子屋の情報<br>
-町2駄菓子屋の情報<br>
+町2の駄菓子屋の情報<br>
 ... <br>
-町$N$駄菓子屋の情報<br>
+町$N$の駄菓子屋の情報<br>
 $d_{11}$ $d_{12}$ ... $d_{1N}$<br>
 $d_{21}$ $d_{22}$ ... $d_{2N}$<br>
 ...<br>
