--- a/HTML/G.html
+++ b/HTML/G.html
@@ -15,11 +15,11 @@
   がっちょ君は遠足を最大限楽しむため、お菓子にもこだわりたい。<br>
 <p>
 <p>
-  がっちょ君はお母さんから$X$円のお小遣いをもらってお菓子を買いに行く。ただし小学校のルールで遠足に持っていくお菓子の合計金額は$Y$円までと決まっていて、$Y$円を上回るとお菓子は全て先生に取り上げられてしまう。
+  がっちょ君はお母さんから$X$円のお小遣いをもらってお菓子を買いに行く。ただし、小学校のルールで遠足に持っていくお菓子の合計金額は$Y$円までと決まっており、$Y$円を上回るとお菓子は全て先生に取り上げられてしまう。
 
 <p>
-  がっちょ君の住む学区には$N$個の町があり、各町には1軒の駄菓子屋がある。各町と各駄菓子屋には1から$N$の番号が割り振られていて、がっちょ君は町1に住んでいる。<br>
-  各駄菓子屋ではいくつかのお菓子が売っていて、1つあたりの値段、1つ買うごとにがっちょ君が得られる満足度が決まっている。また各お菓子の在庫数には限りがある。<br>
+  がっちょ君の住む学区には$N$個の町があり、各町には1軒の駄菓子屋がある。各町には1から$N$の番号が割り振られており、がっちょ君は町1に住んでいる。<br>
+  各駄菓子屋ではいくつかのお菓子が売っており、1つあたりの値段、1つ買うごとにがっちょ君が得られる満足度が決まっている。ただし、各お菓子の在庫数には限りがある。<br>
   また、2つの町の間を移動するには公共交通機関を利用するため、町$i$からある町$j$へ直接移動するには$d_{ij}$円だけお金がかかる。ただし、同じ町内の移動にお金はかからない。<br>
   今、がっちょ君は町1にいる。がっちょ君が$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度の合計を求めよ。
 </p>
