--- a/HTML/G.html
+++ b/HTML/G.html
@@ -21,7 +21,7 @@
   がっちょ君の住む学区には$N$個の町があり、各町には1軒の駄菓子屋がある。各町には1から$N$の番号が割り振られており、がっちょ君は町1に住んでいる。<br>
   各駄菓子屋ではいくつかのお菓子が売っており、1つあたりの値段、1つ買うごとにがっちょ君が得られる満足度が決まっている。ただし、各お菓子の在庫数には限りがある。<br>
   また、2つの町の間を移動するには公共交通機関を利用するため、町$i$からある町$j$へ直接移動するには$d_{ij}$円だけお金がかかる。<br>
-  今、がっちょ君は町1にいる。がっちょ君が$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度の合計を求めよ。
+  今、がっちょ君は町1にいる。がっちょ君の移動にかかる値段の合計とお菓子にかかる値段の合計の和が$X$円以内でお菓子にかかる値段の合計$Y$円までのお菓子を買って町1にある家まで帰ってくるときの満足度の合計の最大値を求めよ。
 </p>
 
 <h2>Input</h2>
@@ -73,7 +73,7 @@ $a_K$ $b_K$ $c_K$<br>
 
 <h2>Output</h2>
 <p>
-  がっちょ君が$X$円以内で$Y$円までのお菓子を買って町1にある家まで帰ってくるときの最大の満足度の合計を1行に出力する。
+  今、がっちょ君は町1にいる。がっちょ君の移動にかかる値段の合計とお菓子にかかる値段の合計の和が$X$円以内でお菓子にかかる値段の合計$Y$円までのお菓子を買って町1にある家まで帰ってくるときの満足度の合計の最大値を1行に出力する。
 </p>
 
 <h2>Sample Input 1</h2>
