--- a/HTML/G.html
+++ b/HTML/G.html
@@ -32,15 +32,15 @@ $N$ $X$ $Y$<br>
 町2の駄菓子屋の情報<br>
 ... <br>
 町$N$の駄菓子屋の情報<br>
-$d_{11}$ $d_{12}$ ... $d_{1N}$<br>
-$d_{21}$ $d_{22}$ ... $d_{2N}$<br>
+$d_{1,1}$ $d_{1,2}$ ... $d_{1,N}$<br>
+$d_{2,1}$ $d_{2,2}$ ... $d_{2,N}$<br>
 ...<br>
-$d_{N1}$ $d_{N2}$ ... $d_{NN}$<br>
+$d_{N,1}$ $d_{N,2}$ ... $d_{N,N}$<br>
 </p>
 <p>
 1行目に町の数$N$と所持金$X$,お菓子を買うために使うことができる上限金額$Y$が空白区切りで与えられる。<br>
 2行目からは$N$個の各駄菓子屋の情報が与えられる。<br>
-続く$N$行$N$列に町$i$と町$j$を直接行き来するために必要な金額$d_{ij}$が空白区切りで与えられる。<br>
+続く$N$行$N$列に町$i$と町$j$を直接行き来するために必要な金額$d_{i,j}$が空白区切りで与えられる。<br>
 </p>
 
 <p>各町の駄菓子屋の情報は以下の形式で与えられる。</p>
@@ -73,7 +73,7 @@ $a_K$ $b_K$ $c_K$<br>
 
 <h2>Output</h2>
 <p>
-  今、がっちょ君は町1にいる。がっちょ君の移動にかかる費用の合計と買ったお菓子の値段の合計の和が$X$円以内で、かつ、買ったお菓子の値段の合計が$Y$円以内になるようにお菓子を買いに行き町1に帰ってくるときの満足度の合計の最大値を1行に出力する。
+  満足度の合計の最大値を1行に出力する。
 </p>
 
 <h2>Sample Input 1</h2>
