--- a/HTML/G.html
+++ b/HTML/G.html
@@ -67,8 +67,8 @@ $a_K$ $b_K$ $c_K$<br>
   <li>$1 \leq a_i \leq 1000$</li>
   <li>$1 \leq b_i \leq 1000$</li>
   <li>$1 \leq c_i \leq 1000$</li>
-  <li>$0 \leq d_{ij} \leq 10000$</li>
-  <li>$d_{ii} = 0$</li>
+  <li>$0 \leq d_{i,j} \leq 10000$</li>
+  <li>$d_{i,i} = 0$</li>
 </ul>
 
 <h2>Output</h2>
