--- a/HTML/H.html
+++ b/HTML/H.html
@@ -10,20 +10,20 @@
 <h1>Problem H: Sequence</h1>
 
 <h2>Problem</h2>
-<p>$N$個の等差数列がある。$i$番目の等差数列の初項は$a_i$で公差は$d_i$で項数は$L$である。1番目の数列から順番に 1番目の数列, 2番目の数列, ………,$N-1$番目の数列, $N$番目の数列と並べ、そうしてできた数列を$A$とした時、$A$から長さ$K$までの任意の区間を選んで、新たに数列$B$を作る。数列$B$の和を最大化せよ。</p>
+<p>項数$L$の等差数列が$N$個ある。$i$番目の等差数列の初項は$a_i$で公差は$d_i$である。1番目の数列から順番に 1番目の数列, 2番目の数列, ………,$N-1$番目の数列, $N$番目の数列と並べ、そうしてできた数列を$A$とした時、$A$から長さ$K$の任意の区間を選んで、新たに数列$B$を作る。数列$B$の和を最大化せよ。</p>
 
 <h2>Input</h2>
 <p>入力は以下の形式で与えられる。</p>
 <p>
-$N$<br>
+$N$ $L$ $K$<br>
 $a_1$ $d_1$<br>
 $a_2$ $d_2$<br>
 ...<br>
 $a_N$ $d_N$<br>
 </p>
 <p>
-    1行目に整数$N$が与えられる。
-    続く$N$行に、$i$個目の等差数列の情報$a_i$, $d_i$が与えられる。（$1 \leq i \leq N$）
+    1行目に3つの整数$N, L, K$が空白区切りで与えられる。<br>
+    続く$N$行に、$i$個目の等差数列の情報$a_i$, $d_i$が空白区切りで与えられる。（$1 \leq i \leq N$）
 </p>
 
 <h2>Constraints</h2>
