--- a/HTML/I.html
+++ b/HTML/I.html
@@ -10,13 +10,15 @@
 <h1>Problem I: Making Pairs</h1>
 
 <h2>Problem</h2>
-<p>本日、ついに完全招待制の高級レストラン「マイヅレストラン」がオープンした。新たな会員を招待する権利を持つのはこのレストランの会員のみで、最初、会員は会員番号0であるレストランのオーナーだけである。</p>
+<p>本日、ついに完全招待制の高級レストラン「マイヅレストラン」がオープンした。新たな会員を招待する権利を持つのはこのレストランの会員のみで、最初、会員は会員番号0であるレストランのオーナーのみである。</p>
 
 <p>マイヅレストランはその高級さ故、オープン初日から$N$日間しか開かれない。その期間中、毎日会員のうち誰か一人が、自分の友人を一人だけ新たに会員として招待する。$i$日目に招待された会員には会員番号$i$が割り当てられ、その会員は招待された日を含めそれ以降毎日来店する。</p>
 
 <p>このレストランには二人用テーブルしか存在しないので、会員の人々はできるだけペアでテーブルを使用して食事をする。食事にはオーナーも参加するので、他の会員はオーナーとペアを組むこともできる。しかし、会員の人々は皆人見知りであり、自分を招待した友人か、自分が招待した友人としかペアを組みたがらない。各会員はもし友人とペアを組めなかった場合、一人寂しく食事をする。</p>
 
+<p>$N$日間の各日について、友人どうしのペアが最大となるようにペアを組んだとき、いくつのペアができるか求めよ。</p>
 <p>$N$日間の各日について、友人どうしのペアが最大でいくつできるか求めよ。</p>
+<p>$N$日間の各日について、友人どうしのペアが最大でいくつになる可能性があるか求めよ。</p>
 
 <h2>Input</h2>
 <p>入力は以下の形式で与えられる。</p>
