--- a/HTML/I.html
+++ b/HTML/I.html
@@ -16,9 +16,7 @@
 
 <p>このレストランには二人用テーブルしか存在しないので、会員の人々はできるだけペアでテーブルを使用して食事をする。食事にはオーナーも参加するので、他の会員はオーナーとペアを組むこともできる。しかし、会員の人々は皆人見知りであり、自分を招待した友人か、自分が招待した友人としかペアを組みたがらない。各会員はもし友人とペアを組めなかった場合、一人寂しく食事をする。</p>
 
-<p>$N$日間の各日について、友人どうしのペアが最大となるようにペアを組んだとき、いくつのペアができるか求めよ。</p>
-<p>$N$日間の各日について、友人どうしのペアが最大でいくつできるか求めよ。</p>
-<p>$N$日間の各日について、友人どうしのペアが最大でいくつになる可能性があるか求めよ。</p>
+<p>N日間の各日について、友人どうしのペアの数が最大となるようにペアを組んだとき、いくつのペアができるか求めよ。</p>
 
 <h2>Input</h2>
 <p>入力は以下の形式で与えられる。</p>
