--- a/HTML/J.html
+++ b/HTML/J.html
@@ -10,7 +10,7 @@
 <h1>Problem J: Cluster Network</h1>
 
 <h2>Problem</h2>
-<p>マイヅ大学にある大規模クラスタ<sup>†</sup>型スーパーコンピュータ（通称「SAKURA」）のクラスタは、$N$台のコンピュータのノードと$M$本の相互に通信が可能な物理的通信路で構成される。また、各ノードには1から$N$までの識別番号が割り当てられている。</p>
+<p>マイヅ大学にある大規模クラスタ<sup>†</sup>型スーパーコンピュータ（通称「SAKURA」）のクラスタは、$N$台のコンピュータ（ノード）と$M$本の相互に通信が可能な物理的通信路で構成される。また、各ノードには1から$N$までの識別番号が割り当てられている。</p>
 
 <p>この度SAKURAの利用を大学関係者だけでなく、県内の企業にも認めることとなった。それに伴い、SAKURAを構成する各ノードを点検する必要がある。しかし、SAKURAの利用スケジュールは数ヶ月先まで埋まっているので、点検中もシステム全体を停止させることはできない。そこで、ノードを1日に1台ずつ順番に点検する。</p>
 
