--- a/HTML/J.html
+++ b/HTML/J.html
@@ -10,7 +10,7 @@
 <h1>Problem J: Cluster Network</h1>
 
 <h2>Problem</h2>
-<p>マイヅ大学にある大規模クラスタ<sup>†</sup>型スーパーコンピュータ（通称「SAKURA」）のクラスタは、$N$台のコンピュータ（ノード）と$M$本の相互に通信が可能な物理的通信路で構成される。また、各ノードには1から$N$までの識別番号が割り当てられている。</p>
+<p>マイヅ大学にある大規模クラスタ<sup>†</sup>型スーパーコンピュータ（通称「SAKURA」）のクラスタは、$N$台のコンピュータ（ノード）と$M$本の相互に通信が可能な物理的通信路で構成される。また、各ノードにはそれぞれ1から$N$までの識別番号が割り当てられている。</p>
 
 <p>この度SAKURAの利用を大学関係者だけでなく、県内の企業にも認めることとなった。それに伴い、SAKURAを構成する各ノードを点検する必要がある。しかし、SAKURAの利用スケジュールは数ヶ月先まで埋まっているので、点検中もシステム全体を停止させることはできない。そこで、ノードを1日に1台ずつ順番に点検する。</p>
 
@@ -45,7 +45,7 @@ $u_M$ $v_M$<br>
     <li>$N-1 \leq M \leq min(\frac{N\times(N-1)}{2},10^5)$</li>
     <li>$1 \leq w_i \leq 10^6$</li>
     <li>$1 \leq u_i, v_i \leq N, u_i \ne v_i$</li>
-    <li>$(u_i,v_i) \ne (u_j,v_j), (u_i,v_i) \ne (v_j,u_j)$</li>
+    <li>$(u_i,v_i) \ne (u_j,v_j), (u_i,v_i) \ne (v_j,u_j), i \ne j$</li>
     <li>入力は全て整数</li>
 </ul>
 
