--- a/HTML/J.html
+++ b/HTML/J.html
@@ -16,11 +16,11 @@
 
 <p>点検は$N$日にわたって行われ、$i$日目にノード$i$を点検する。このとき、点検するノードとそのノードに直接接続している通信路をSAKURAのクラスタから切り離す。それによって、SAKURAのクラスタ全体は1つ以上のクラスタに分断されるので、そのうちのいずれかをSAKURAの代わりに運用する。当然、点検中のノードは運用することができない。</p>
 
-<p>複数の非連結なクラスタに分断された場合、それらの中で最も「性能値」の高いクラスタのみを運用する。各クラスタの「性能値」はそれを構成する各ノードに設定された「性能値」の和で表される。</p>
+<p>複数の非連結なクラスタに分断された場合、それらの中で最も「総合性能値」の高いクラスタのみを運用する。各クラスタの「総合性能値」はそれを構成する各ノードに設定された「単体性能値」の和で表される。</p>
 
-<p>SAKURAを構成するノードの数、通信路の本数と各ノードに設定された「性能値」が与えられるので、$i$日目の点検中に運用されるクラスタの「性能値」を出力せよ。</p>
+<p>SAKURAを構成するノードの数、通信路の本数と各ノードに設定された「単体性能値」が与えられるので、$i$日目の点検中に運用されるクラスタの「総合性能値」を出力せよ。</p>
 
-<p>†：複数のコンピュータを結合してひとまとまりにしたシステムのこと。ここでは、物理的通信路で連結なノードの集合とする。</p>
+<p>†：1つ以上のコンピュータを結合してひとまとまりにしたシステムのこと。ここでは、物理的通信路で連結なノードの集合とする。</p>
 
 <h2>Input</h2>
 <p>入力は以下の形式で与えられる。</p>
@@ -34,7 +34,7 @@ $u_M$ $v_M$<br>
 </p>
 <p>
     1行目にクラスタを構成するノードの数$N$と通信路の本数$M$が空白区切りで与えられる。<br>
-    2行目には各ノードの「性能値」を表す$N$個の整数が空白区切りで与えられる。$i$番目の整数$w_i$はノード$i$の「性能値」を表す。（$1 \leq i \leq N$）<br>
+    2行目には各ノードの「単体性能値」を表す$N$個の整数が空白区切りで与えられる。$i$番目の整数$w_i$はノード$i$の「単体性能値」を表す。（$1 \leq i \leq N$）<br>
     3行目からの$M$行には各通信路がつなぐ2つのノードの識別番号が空白区切りで与えられる。2+$i$行目の入力では、通信路がノード$u_i$とノード$v_i$を相互につなぐことを表す。（$1 \leq i \leq M$）
 </p>
 
@@ -50,7 +50,7 @@ $u_M$ $v_M$<br>
 </ul>
 
 <h2>Output</h2>
-<p>出力は$N$行からなる。<br>$i$行目には、$i$日目に運用されるクラスタの「性能値」を出力する。（$1 \leq i \leq N$）<br>出力の最後には改行を入れること。</p>
+<p>出力は$N$行からなる。<br>$i$行目には、$i$日目に運用されるクラスタの「総合性能値」を出力する。（$1 \leq i \leq N$）<br>出力の最後には改行を入れること。</p>
 
 <h2>Sample Input 1</h2>
 <pre>
