--- a/HTML/I.html
+++ b/HTML/I.html
@@ -44,9 +44,7 @@ $p_N$<br>
 <p>
   出力は$N$行からなる。<br>
   $i$行目には、$i$日目に作ることのできる友人どうしのペアの最大数を出力する。
-  ($1 \leq i  \leq N$)<br>
-  出力の最後には改行を入れること。
-</p>
+  ($1 \leq i  \leq N$)</p>
 
 <h2>Sample Input 1</h2>
 <pre>
