--- a/HTML/J.html
+++ b/HTML/J.html
@@ -50,7 +50,7 @@ $u_M$ $v_M$<br>
 </ul>
 
 <h2>Output</h2>
-<p>出力は$N$行からなる。<br>$i$行目には、$i$日目に運用されるクラスタの「総合性能値」を出力する。（$1 \leq i \leq N$）<br>出力の最後には改行を入れること。</p>
+<p>出力は$N$行からなる。<br>$i$行目には、$i$日目に運用されるクラスタの「総合性能値」を出力する。（$1 \leq i \leq N$）</p>
 
 <h2>Sample Input 1</h2>
 <pre>
