--- a/HTML/K.html
+++ b/HTML/K.html
@@ -10,10 +10,11 @@
 <p>
 チノルチョコでは<var>m</var>種類のチョコレートを販売しており、それぞれ別の工場で製造している。<br>
 すべての店で全種類のチョコレートを販売する。<br>
-チノルチョコではチョコレートを搬送するためのトラックを1台しか所有していなく、1台のトラックでは1店分のチョコレートしか運べないので、店から別の店へ移動する際に工場をすべてを回ってチョコレートを回収してから移動する。
+チノルチョコではチョコレートを搬送するためのトラックを1台しか所有しておらず、1台のトラックでは1店分のチョコレートしか運べない。<br>
+そのためトラックは店から別の店へ移動する際に工場をすべてを回ってチョコレートを回収してから移動する。
 </p>
 <p>
-ある店から別の店へ移動する時の最短移動距離の最大が最小になるように店を配置した時の最大の移動距離を求めよ。
+ある店から別の店へ移動する時の最短移動距離の最大が最小になるように店を配置した時の、最大の移動距離を求めよ。
 </p>
 <h2>Input</h2>
 
@@ -46,7 +47,7 @@
 
 <h2>Output</h2>
 <p>
-移動距離の最大が最小になるように店を配置した時の最大の移動距離を出力せよ。<br>
+最短移動距離の最大が最小になるように店を配置した時の、最大の移動距離を出力せよ。<br>
 誤差が10<sup>&minus; 6</sup>を超えてはならない。
 </p>
 
