--- a/HTML/L.html
+++ b/HTML/L.html
@@ -12,7 +12,7 @@
 <h2>Problem</h2>
 <p>長さ$N$の2つの数列$A$と$B$が与えられる。はじめ、数列$A$の$i$項目は$a_i$であり、数列$B$の$i$項目は$b_i$である。</p>
 
-<p>以下のような形式の命令文が合計$Q$個与えられるので与えられた順に処理を行うプログラムを作成せよ。</p>
+<p>以下のような形式の命令文が合計$Q$個与えられるので、与えられた順に処理を行うプログラムを作成せよ。</p>
 <p>
 各命令文は3つの整数$x,y,z$であらわされる。
 <li>数列$A$の$y$項目の値を$z$にする。 ($x=1$のとき)</li>
@@ -39,22 +39,22 @@ $x_Q$ $y_Q$ $z_Q$<br>
 <h2>Constraints</h2>
 <p>入力は以下の条件を満たす。</p>
 <ul>
-  <li>$2 \le N \le 200000$</li>
-  <li>$2 \le Q \le 200000$</li>
-  <li>$1 \le a_i \le 1000000000$</li>
-  <li>$1 \le b_i \le 1000000000$</li>
+  <li>$2 \le N \le 2 \times 10^5$</li>
+  <li>$2 \le Q \le 2 \times 10^5$</li>
+  <li>$1 \le a_i \le 10^9$</li>
+  <li>$1 \le b_i \le 10^9$</li>
   <li>$1 \le x_i \le 6$</li>
-<li>$1 \le y_i \le N $ ($1 \le x_i \le 4$のとき)</li>
-<li>$y_i = -1$ ($5 \le x_i \le 6$のとき)</li>
-<li>$1 \le z_i \le 1000000000$ ($1 \le x_i \le 2$のとき)</li>
-<li>$y_i \le z_i \le N$ ($3 \le x_i \le 4$のとき)</li>
-<li>$z_i = -1$ ($5 \le x_i \le 6$のとき)</li>
-
+  <li>$1 \le y_i \le N $ ($1 \le x_i \le 4$のとき)</li>
+  <li>$y_i = -1$ ($x_i=5, 6$のとき)</li>
+  <li>$1 \le z_i \le 10^9$ ($x_i=1, 2$のとき)</li>
+  <li>$y_i \le z_i \le N$ ($x_i=3, 4$のとき)</li>
+  <li>$z_i = -1$ ($x_i=5, 6$のとき)</li>
+  <li>入力はすべて整数</li>
 </ul>
 
 <h2>Output</h2>
 <p>
-$x=3$または$x=4$の命令文が入力で与えられる度に見つけた値を1行に出力せよ。
+$x=3$または$x=4$の命令文が入力で与えられる度に見つけた値を1行に出力する。
  </p>
 
 <h2>Sample Input 1</h2>
