--- a/HTML/D.html
+++ b/HTML/D.html
@@ -12,7 +12,7 @@
 <h2>Problem</h2>
 <p>$N \times N$のグリッドがある。はじめすべてのマスは白色である。以下の手順にしたがって黒色のマスを増やしていく。</p>
 
-<p>上から偶数番目かつ、左から偶数番目であるマスの中で、白色のマスを1つ選ぶ。選んだマスを黒色に変化する。さらに、そのマスの上下左右それぞれの方向について、隣接している白色のマスも連鎖的に黒色に変化する。この連鎖はその方向に白色のマスが存在しなくなるまで続く。(以下に例を示す)</p>
+<p>上から偶数番目かつ、左から偶数番目であるマスの中で、白色のマスを1つ選ぶ。選んだマスは黒色に変化する。さらに、そのマスの上下左右それぞれの方向について、隣接している白色のマスも連鎖的に黒色に変化する。この連鎖はその方向に白色のマスが存在しなくなるまで続く。(以下に例を示す)</p>
 <p>
 □□□□□□□□□<br>
 □□□□□□□□□<br>
@@ -80,7 +80,7 @@ $A_{N,1}$ $A_{N,2}$ ... $A_{N,N}$<br>
     <li>$3 \le N \le 127$</li>
     <li>$N$は必ず奇数である</li>
     <li>$A_{i,j}$は'o'か'x'である</li>
-    <li>必ず作ることができるような入力しか与えられないことが保証される。</li> 
+    <li>必ず作ることができるような入力しか与えられないことが保証される。</li>
 </ul>
 
 <h2>Output</h2>
